Completed work on roman numerals kata

--- a/Week2.RomanNumerals.Tests/Week2.RomanNumerals.Tests.csproj
+++ b/Week2.RomanNumerals.Tests/Week2.RomanNumerals.Tests.csproj
@@ -50,6 +50,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Week2.RomanNumerals\Week2.RomanNumerals.csproj">
+      <Project>{8EFA6EA2-4423-49E0-B9A5-0F2C60782B8F}</Project>
+      <Name>Week2.RomanNumerals</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
