--- a/Week3.TicTacToe/Week3.TicTacToe.csproj
+++ b/Week3.TicTacToe/Week3.TicTacToe.csproj
@@ -41,6 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Board.cs" />
+    <Compile Include="BoardDimensions.cs" />
+    <Compile Include="CellValues.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
