--- a/Week4.InstrumentProcessor/Week4.InstrumentProcessor.csproj
+++ b/Week4.InstrumentProcessor/Week4.InstrumentProcessor.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\InstrumentEventArgs.cs" />
     <Compile Include="InstrumentProcessor.cs" />
     <Compile Include="Interfaces\IInstrument.cs" />
     <Compile Include="Interfaces\IInstrumentProcessor.cs" />
