--- a/Week4.InstrumentProcessor.Tests/packages.config
+++ b/Week4.InstrumentProcessor.Tests/packages.config
@@ -3,4 +3,5 @@
   <package id="Castle.Core" version="4.2.1" targetFramework="net451" />
   <package id="Moq" version="4.7.142" targetFramework="net451" />
   <package id="NUnit" version="3.8.1" targetFramework="net451" />
+  <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net451" />
 </packages>
