Added Week5 kata - gilded rose, updated packages

--- a/Week2.RomanNumerals.Tests/Week2.RomanNumerals.Tests.csproj
+++ b/Week2.RomanNumerals.Tests/Week2.RomanNumerals.Tests.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Reference Include="nunit.framework, Version=3.8.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.8.1\lib\net45\nunit.framework.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -48,13 +49,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\Week2.RomanNumerals\Week2.RomanNumerals.csproj">
       <Project>{8EFA6EA2-4423-49E0-B9A5-0F2C60782B8F}</Project>
       <Name>Week2.RomanNumerals</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
