Initial work on MarsRover kata

--- a/Week6.MarsRover/Week6.MarsRover.csproj
+++ b/Week6.MarsRover/Week6.MarsRover.csproj
@@ -40,8 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Heading.cs" />
     <Compile Include="MarsRover.cs" />
+    <Compile Include="Plateau.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoverOutsideOfPlateauException.cs" />
+    <Compile Include="VectorWithHeading.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
