--- a/Week6.MarsRover.Tests/Week6.MarsRover.Tests.csproj
+++ b/Week6.MarsRover.Tests/Week6.MarsRover.Tests.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="MarsRoverShould.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VectorWithHeadingComparerShould.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
