--- a/Week6.MarsRover/Week6.MarsRover.csproj
+++ b/Week6.MarsRover/Week6.MarsRover.csproj
@@ -40,12 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Heading.cs" />
+    <Compile Include="Terrain\Heading.cs" />
     <Compile Include="MarsRover.cs" />
-    <Compile Include="Plateau.cs" />
+    <Compile Include="Terrain\Plateau.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RoverOutsideOfPlateauException.cs" />
-    <Compile Include="VectorWithHeading.cs" />
+    <Compile Include="Exceptions\RoverOutsideOfPlateauException.cs" />
+    <Compile Include="Terrain\VectorWithHeading.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
