--- a/Week6.MarsRover.Console/Week6.MarsRover.Console.csproj
+++ b/Week6.MarsRover.Console/Week6.MarsRover.Console.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{48246520-95C8-47EB-8127-66C3BD257A7C}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Week6.MarsRover</RootNamespace>
-    <AssemblyName>Week6.MarsRover</AssemblyName>
+    <ProjectGuid>{0F0DB47D-A0C3-4EC2-85C2-A2AF0485ADDF}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>Week6.MarsRover.Console</RootNamespace>
+    <AssemblyName>Week6.MarsRover.Console</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -40,20 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Exceptions\InvalidHeadingException.cs" />
-    <Compile Include="Exceptions\InvalidMovementException.cs" />
-    <Compile Include="Movement\Driver.cs" />
-    <Compile Include="Movement\Movement.cs" />
-    <Compile Include="Parser\Parser.cs" />
-    <Compile Include="Parser\ParserOutput.cs" />
-    <Compile Include="Terrain\Heading.cs" />
-    <Compile Include="MarsRover.cs" />
-    <Compile Include="Terrain\HeadingOutput.cs" />
-    <Compile Include="Terrain\Plateau.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Exceptions\RoverOutsideOfPlateauException.cs" />
-    <Compile Include="Terrain\VectorWithHeading.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Week6.MarsRover\Week6.MarsRover.csproj">
+      <Project>{48246520-95c8-47eb-8127-66c3bd257a7c}</Project>
+      <Name>Week6.MarsRover</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
