--- a/Week8.Bank.Tests/Week8.Bank.Tests.csproj
+++ b/Week8.Bank.Tests/Week8.Bank.Tests.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountShould.cs" />
+    <Compile Include="AtmShould.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
