--- a/Week8.Bank/Week8.Bank.csproj
+++ b/Week8.Bank/Week8.Bank.csproj
@@ -40,7 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account\IAccount.cs" />
+    <Compile Include="Atm\Atm.cs" />
+    <Compile Include="Printer\IPrinter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Transaction\DebitTransaction.cs" />
+    <Compile Include="Transaction\ITransaction.cs" />
+    <Compile Include="Transaction\CreditTransaction.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
