Added tests for account

--- a/Week8.Bank/Week8.Bank.csproj
+++ b/Week8.Bank/Week8.Bank.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account\Account.cs" />
     <Compile Include="Account\IAccount.cs" />
     <Compile Include="Atm\Atm.cs" />
     <Compile Include="Atm\IAtm.cs" />
